# ray-tracer

./: CMakeLists.txt  color.h  main  main.cpp  vec3.h
images/: bubble.ppm  camera.ppm  camera_vfov.ppm  defocus.ppm  dielectric.ppm  dielectric2.ppm  fuzz.ppm  gradient.ppm  gray.ppm  reflect.ppm  thread.ppm
src/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  util.h  vec3.h
